--- a/index.html
+++ b/index.html
@@ -11,12 +11,32 @@ body {
     display: block;
     margin: 1px;
 }
+.cross-line {
+        height: 200px;
+        width: 100%;
+        display: flex;
+        justify-content: right;
+        align-items: right;
+      }
+
+      .line {
+        height: 2px;
+        width: 50%;
+        background-color: black;
+      }
+
+      .line.horizontal {
+        transform: rotate(135deg);
+      }
 </style>
 <body>
 <center>
     <div class="c1">
         <pre style="font-size: 60px;"><strong style="text-align: center;font-size: 80px;">CORE</strong>
- VALUES</pre><div style="background-color: darkblue;">
+ VALUES</pre><div class="cross-line">
+    <div class="line"></div>
+    <div class="line horizontal"></div>
+  </div><div style="background-color: darkblue;">
             <pre style="text-align: left; font-size: 50px;">    WHAT WE 
     <strong  style="font-size: 65px;text-align: left; ">VALUE</strong></pre>
             <table style="font-size: 20px;">
